--- a/_server/package.json
+++ b/_server/package.json
@@ -4,6 +4,7 @@
   "description": "Template description",
   "dependencies": {
     "express": "^4.15.2",
+    "jimp": "^0.5.4",
     "md5": "^2.2.1",
     "mysql": "^2.16.0",
     "socket.io": "^2.0.3",
